[gd_scene load_steps=2 format=2]

[ext_resource path="res://keepass/Test.gd" type="Script" id=1]

[node name="Inputs" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FilePath" type="LineEdit" parent="."]
margin_left = 53.0
margin_top = 69.0
margin_right = 508.0
margin_bottom = 97.0
hint_tooltip = "
"
placeholder_text = "File path"

[node name="Password" type="LineEdit" parent="."]
margin_left = 53.0
margin_top = 132.0
margin_right = 215.0
margin_bottom = 160.0
hint_tooltip = "
"
placeholder_text = "Password"

[node name="Go" type="Button" parent="."]
margin_left = 53.0
margin_top = 200.0
margin_right = 83.0
margin_bottom = 228.0
text = "Go"

[node name="Label" type="Label" parent="."]
margin_left = 53.0
margin_top = 25.0
margin_right = 338.0
margin_bottom = 45.0
text = "Debug Keepass 3.x file decrypting"

[node name="Label2" type="Label" parent="."]
margin_left = 53.0
margin_top = 269.0
margin_right = 93.0
margin_bottom = 289.0
text = "See the Editor Output window for messages.

It takes around 10 seconds to produce an output."

[node name="PathNote" type="Label" parent="."]
margin_left = 529.0
margin_top = 69.0
margin_right = 778.0
margin_bottom = 89.0
text = "Add it to: ../data/xkdbx-file-path.txt"

[node name="Processing" type="Label" parent="."]
modulate = Color( 1, 0.329412, 0, 1 )
margin_left = 114.0
margin_top = 200.0
margin_right = 203.0
margin_bottom = 220.0
text = "Processing ..."

[connection signal="text_entered" from="Password" to="." method="_on_Password_text_entered"]
[connection signal="pressed" from="Go" to="." method="_on_Go_pressed"]
